// Copyright 2010-2022 Google LLC
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package operations_research.sat.v1;

import "ortools/sat/cp_model.proto";
import "ortools/sat/sat_parameters.proto";

option csharp_namespace = "Google.OrTools.Sat";
option java_package = "com.google.ortools.sat.v1";
option java_multiple_files = true;
option java_outer_classname = "CpModelServiceProto";

// This service enables sending a CpModelProto to a server and getting back
// a solution of the problem.
service CpSolver {
  // Single solve, sends a model, gets a response.
  rpc SolveProblem(CpSolverRequest) returns (CpSolverResponse) {
  }
}

// The request sent to the remote solve service.
message CpSolverRequest {
  reserved 2;
  // The model to solve.
  CpModelProto model = 1;

  // Solver parameters.
  SatParameters parameters = 3;
}
